<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94B6ECF3"
    tools:context=".chicomendes">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="612dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textsantacrema" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="113dp"
            android:src="@drawable/santacrema2"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="113dp"
            android:src="@drawable/santacrema1"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/bntSite3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bntsite" />

        <Button
            android:id="@+id/bntLigar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bntligar" />

        <Button
            android:id="@+id/bntMapa3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bntmaps" />

        <Button
            android:id="@+id/bntvoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bntvoltar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>